--- a/pooraa/properties/data.properties
+++ b/pooraa/properties/data.properties
@@ -1,2 +1,3 @@
-ChromedriverPath=drivers\chromedriver.exe
-FirefoxdriverPath=drivers\geckodriver.exe
+ChromedriverPath=drivers\\chromedriver.exe
+FirefoxdriverPath=drivers\\geckodriver.exe
+MerapooraaXlsx=xlsxdata\\merapooaa.xlsx
