--- a/pooraa/properties/data.properties
+++ b/pooraa/properties/data.properties
@@ -1,3 +1,3 @@
 ChromedriverPath=drivers\\chromedriver.exe
 FirefoxdriverPath=drivers\\geckodriver.exe
-MerapooraaXlsx=XlsxData\merapooraa.xlsx
+MerapooraaXlsx=XlsxData\\merapooraa.xlsx
