--- a/pooraa/properties/data.properties
+++ b/pooraa/properties/data.properties
@@ -1,3 +1,5 @@
 ChromedriverPath=drivers\\chromedriver.exe
 FirefoxdriverPath=drivers\\geckodriver.exe
 MerapooraaXlsx=XlsxData\\merapooraa.xlsx
+Log4jPath=.//log4j.xml
+ScreenshotsPath=./screenshots/
